update home page

--- a/index.html
+++ b/index.html
@@ -3676,7 +3676,7 @@
                     data-rotate="flipInX"
                     data-speed="3500"
                   >
-                    Canvas makes your Business
+                    IT Infrastructure this is
                     <span class="t-rotate"
                       >Simple|Customizable|Flexible|Easy|Profitable</span
                     >
@@ -3684,8 +3684,7 @@
                 </h1>
 
                 <span class="d-none d-md-block"
-                  >Learn how to grow your Awesome idea into a successful
-                  business.</span
+                  >Empower your team with cutting-edge technology, seamless connectivity, and unparalleled reliability—crafted to inspire greatness.</span
                 >
               </div>
 
@@ -3714,11 +3713,10 @@
                   </div>
 
                   <div class="fbox-content">
-                    <h3>Responsive Layout</h3>
+                    <h3>Networking Solutions</h3>
 
                     <p>
-                      Powerful Layout with Responsive functionality that can be
-                      adapted to any screen size. Resize browser to view.
+                      Modern networking solutions include hardware such as routers, switches, and wireless access points, along with software-defined networking (SDN) for dynamic traffic management. Security components like firewalls, IDS/IPS, and VPN solutions.
                     </p>
                   </div>
                 </div>
@@ -3731,12 +3729,10 @@
                   </div>
 
                   <div class="fbox-content">
-                    <h3>Retina Ready Graphics</h3>
+                    <h3>Cloud Solutions</h3>
 
                     <p>
-                      Looks beautiful &amp; ultra-sharp on Retina Screen
-                      Displays. Retina Icons, Fonts &amp; all others graphics
-                      are optimized.
+                      Cloud services encompass public, private, and hybrid models to optimize scalability and resource management. Companies leverage cloud security, backup solutions, and hybrid tools to build resilient infrastructures that adapt to evolving business needs.
                     </p>
                   </div>
                 </div>
@@ -3749,11 +3745,10 @@
                   </div>
 
                   <div class="fbox-content">
-                    <h3>Powerful Performance</h3>
+                    <h3>Data Storage & Management</h3>
 
                     <p>
-                      Canvas includes tons of optimized code that are completely
-                      customizable and deliver unmatched fast performance.
+                      Efficient data management relies on SAN, NAS, and object storage solutions that provide scalable capacity for enterprises. Backup, disaster recovery, and data archiving ensure that critical business information remains accessible and secure at all times.
                     </p>
                   </div>
                 </div>
@@ -3766,12 +3761,10 @@
                   </div>
 
                   <div class="fbox-content">
-                    <h3>Premium Sliders Included</h3>
+                    <h3>Structured Cabling Solutions</h3>
 
                     <p>
-                      Canvas included 20+ custom designed Slider Pages with
-                      Premium Sliders like Layer, Revolution, Swiper &amp;
-                      others.
+                      Physical cabling services include the design, installation, and testing of structured copper and fiber optic cabling systems. Organized and efficient cabling solutions that support high-speed data transmission, reduce signal interference, and ensure dependable network performance.
                     </p>
                   </div>
                 </div>
@@ -3784,11 +3777,10 @@
                   </div>
 
                   <div class="fbox-content">
-                    <h3>Unlimited Color Options</h3>
+                    <h3>IT Operations / Management</h3>
 
                     <p>
-                      Change the color scheme of the Theme in a flash just by
-                      changing the 6-digit HEX code in the colors.php file.
+                      Comprehensive IT operations services include infrastructure monitoring, configuration management, and IT service management (ITSM) platforms like ServiceNow. Automation and orchestration tools streamline workflows, boosting efficiency and reducing operational overhead.
                     </p>
                   </div>
                 </div>
@@ -3801,11 +3793,10 @@
                   </div>
 
                   <div class="fbox-content">
-                    <h3>Customizable Fonts</h3>
+                    <h3>IT Training Services</h3>
 
                     <p>
-                      Use any Font you like from Google Web Fonts, Typekit or
-                      other Web Fonts. They will blend in perfectly.
+                      IT training services provide technical courses, certification preparation, and end-user training for productivity tools. This includes specialized training in cloud technologies, cybersecurity, DevOps, and more, ensuring staff remain knowledgeable and compliant.
                     </p>
                   </div>
                 </div>
@@ -3860,7 +3851,7 @@
                     aria-controls="v-pills-home"
                     aria-selected="true"
                   >
-                    <i class="me-2 bi-display"></i>Responsive Layout<i
+                    <i class="me-2 bi-display"></i>Unstoppable Network Performance<i
                       class="fa-solid fa-chevron-right ms-auto"
                     ></i>
                   </button>
@@ -3875,7 +3866,7 @@
                     aria-controls="v-pills-profile"
                     aria-selected="false"
                   >
-                    <i class="me-2 bi-magic"></i>Retina Ready Display<i
+                    <i class="me-2 bi-magic"></i>Limitless Cloud Possibilities<i
                       class="fa-solid fa-chevron-right ms-auto"
                     ></i>
                   </button>
@@ -3890,8 +3881,7 @@
                     aria-controls="v-pills-disabled"
                     aria-selected="false"
                   >
-                    <i class="me-2 bi-droplet-half"></i>Unlimited Color
-                    Options<i class="fa-solid fa-chevron-right ms-auto"></i>
+                    <i class="me-2 bi-droplet-half"></i>Flawless Data Management<i class="fa-solid fa-chevron-right ms-auto"></i>
                   </button>
 
                   <button
@@ -3904,7 +3894,7 @@
                     aria-controls="v-pills-messages"
                     aria-selected="false"
                   >
-                    <i class="me-2 bi-boxes"></i>Bootstrap 3.1 Compatible<i
+                    <i class="me-2 bi-boxes"></i>Next-Level Security &amp; Connectivity<i
                       class="fa-solid fa-chevron-right ms-auto"
                     ></i>
                   </button>
@@ -3919,7 +3909,7 @@
                     aria-controls="v-pills-settings"
                     aria-selected="false"
                   >
-                    <i class="me-2 bi-circle-half"></i>Light &amp; Dark Scheme<i
+                    <i class="me-2 bi-circle-half"></i>Unmatched Expert Training<i
                       class="fa-solid fa-chevron-right ms-auto"
                     ></i>
                   </button>
@@ -3943,15 +3933,7 @@
                       alt="Image"
                     />
 
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Quam, ex, inventore, tenetur, repellat ipsam soluta libero
-                    amet nam aspernatur perspiciatis quos praesentium et debitis
-                    ea odit enim illo aliquid eligendi numquam neque. Ipsum,
-                    voluptatibus, perspiciatis a quam aliquid cumque cupiditate
-                    id ipsa tempora eveniet. Cupiditate, necessitatibus,
-                    consequatur odio. Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Dicta, vitae, laboriosam libero nihil
-                    labore hic modi? Odit, veritatis nulla molestiae!
+                    Build a network that drives government innovation with unparalleled speed, reliability, and security. Our advanced networking solutions deliver next-generation performance through enterprise-grade routers, switches, and SDN technologies designed to elevate connectivity. From software-defined networking (SDN) to next-generation firewalls, we offer a powerful suite of products that keep your operations secure and efficient. With load balancing, WAN optimization, and real-time analytics, our solutions maximize bandwidth usage and optimize user experience. Every component is engineered for zero downtime and peak performance, ensuring your infrastructure operates seamlessly. Our goal is to empower agencies to communicate effortlessly and respond rapidly to mission-critical demands. Experience the power of a network built for the future—today.
                   </div>
 
                   <div
@@ -3963,32 +3945,7 @@
                   >
                     <h3>Retina Ready Display</h3>
 
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Nam, voluptatem reprehenderit natus facilis id deserunt
-                    iusto incidunt cumque odit molestias iste dolor eum esse
-                    soluta facere quidem minima in voluptate explicabo ducimus
-                    alias ratione aut molestiae omnis fuga labore quod optio
-                    modi voluptatum nemo suscipit porro maxime ex. Maiores,
-                    ratione eligendi labore quaerat veniam laborum nam rem
-                    delectus illum aspernatur quas sequi animi quae nulla alias
-                    hic inventore ex perspiciatis nisi consequatur enim a aut
-                    dolorum modi quod perferendis dicta impedit magni placeat
-                    repellat. Soluta, dicta, dolores, reiciendis, eum accusamus
-                    esse et debitis rem fugit fugiat dignissimos pariatur sint
-                    quod laborum autem. Nulla, ducimus, culpa, vel esse unde
-                    sapiente expedita corrupti consectetur veritatis quas autem
-                    laborum mollmquam amet eius. Numquam, ad, quaerat, ab,
-                    deleniti rem quae doloremque tenetur ea illum hic amet dolor
-                    suscipit porro ducimus excepturi perspiciatis modi
-                    praesentium voluptas quos expedita provident adipisci
-                    dolorem! Aliquam, ipsum voluptatem et voluptates impedit ab
-                    libero similique a. Nisi, ea magni et ab voluptatum nemo
-                    numquam odio quis libero aspernatur architecto tempore qui
-                    quisquam saepe corrupti necessitatibus natus quos aliquid
-                    non voluptatibus quod obcaecati fugiat quibusdam quidem
-                    inventore quia eveniet iusto culpa incidunt vero vel in
-                    accusamus eum. Molestiae nihil voluptate molestias illum
-                    eligendi esse nesciunt.
+                    Redefine what’s possible with cloud infrastructure solutions that adapt to your agency’s unique needs. Our cloud services span public, private, and hybrid models, delivering unmatched flexibility and control. From seamless cloud migrations to sophisticated hybrid deployments, we help agencies leverage the power of the cloud without compromising security or compliance. Our offerings include cloud-native solutions for secure storage, robust disaster recovery, and comprehensive cloud management tools that provide full visibility and oversight. Integrated cloud security safeguards sensitive data, while automated backups ensure resilience and business continuity. Unlock new levels of efficiency and scalability, enabling your team to achieve more while maintaining the highest levels of reliability and security.
                   </div>
 
                   <div
@@ -4005,22 +3962,7 @@
                     />
 
                     <h3>Unlimited Color Options</h3>
-                    Dolor aperiam modi aliquam dolores consequatur error commodi
-                    ad eius incidunt! Libero, odio incidunt ullam sunt fugiat?
-                    Laboriosam, perferendis, debitis, harum soluta iste eos sunt
-                    odit architecto porro eveniet sint optio nihil animi.
-                    Laudantium, quam, culpa, velit molestias exercitationem
-                    reprehenderit enim distinctio aliquam aut ex numquam sequi
-                    assumenda veritatis fuga voluptatum. Magni, voluptates
-                    adipisci unde sapiente eligendi ea maxime tempora pariatur
-                    ipsa.. Lorem ipsum dolor sit amet, consectetur adipisicing
-                    elit. Recusandae, aspernatur, saepe, quidem animi hic rem
-                    libero earum fuga voluptas culpa iure qui accusantium ab
-                    quae dolorum laborum quia repellat fugit aut minima
-                    molestias placeat mollitia doloribus quibusdam consectetur
-                    officia nesciunt ad. Ab, quod ipsum commodi assumenda
-                    doloribus possimus sed laudantium.Lorem ipsum dolor sit
-                    amet, consectetur adipisicing elit.
+                    Take control of your data with cutting-edge storage solutions that deliver precision, performance, and security. Our enterprise storage systems—SAN, NAS, and object storage—are built to handle the most demanding workloads, ensuring uninterrupted access and zero data loss. We provide backup and disaster recovery solutions that are fail-proof, automated, and fast, protecting your data from unexpected incidents. With intelligent archiving options, agencies can optimize storage costs while maintaining quick access to historical records. Every solution is crafted to exceed the highest standards of data integrity, confidentiality, and availability, allowing agencies to transform their data into actionable insights. Achieve unparalleled data management for a more responsive and proactive organization.
                   </div>
 
                   <div
@@ -4038,16 +3980,7 @@
 
                     <h3>Bootstrap v3.2.0 Compatiable</h3>
 
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Debitis, nostrum, dolores id quo nam repudiandae ad culpa
-                    architecto minima nemo eaque soluta nulla laborum neque
-                    provident saepe facilis expedita numquam quas alias in
-                    perferendis accusamus ipsam blanditiis sit voluptatem
-                    temporibus vero error veritatis repellat eos reiciendis
-                    repellendus quam. Officia dicta ipsam nostrum aperiam.
-                    Dolor, expedita enim modi nostrum commodi sint architecto
-                    aliquam aut mollitia repellendus deserunt quaerat aspernatur
-                    aperiam voluptatibus consequatur rerum consequuntur.
+                    Safeguard your facilities with state-of-the-art service cameras and a structured cabling network that enhances efficiency. Our high-resolution IP cameras, thermal imaging, and VMS systems provide complete surveillance coverage, delivering crystal-clear visibility across all environments. Access control systems, including biometric scanners and smart card readers, further secure critical areas, ensuring only authorized personnel have entry. With structured cabling solutions using Cat 6, Cat 7, and fiber optics, we build resilient, high-speed networks that connect every endpoint reliably. Our professional installations include meticulous cable management and testing, resulting in clean, optimized setups that support future expansion. Trust our solutions to deliver bulletproof security and seamless connectivity for your organization’s physical infrastructure.
                   </div>
 
                   <div
@@ -4059,28 +3992,7 @@
                   >
                     <h3>Light &amp; Dark Scheme Available</h3>
 
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Quas, temporibus, maxime, laudantium quidem sapiente
-                    deserunt error rerum illum explicabo voluptate velit tempora
-                    cupiditate reprehenderit consequuntur nemo in et blanditiis
-                    soluta tempore perspiciatis at atque excepturi culpa facere
-                    sequi impedit cumque illo molestias saepe eveniet ducimus
-                    fugiat reiciendis unde. Modi, at laboriosam ex velit commodi
-                    officiis! Neque, consequatur, modi, nulla, voluptatem
-                    quibusdam incidunt minus dolores repellat nihil consectetur
-                    ducimus aliquid. Eaque, tempora voluptatum accusantium
-                    expedita obcaecati magnam voluptates consequatur ut harum
-                    rem dolor id error. Officia, repudiandae, eos, quibusdam
-                    porro eius esse cupiditate non fugit dignissimos delectus et
-                    tempora sequi fugiat quo voluptatem temporibus vel
-                    obcaecati? Laboriosam, quis obcaecati quas veniam
-                    repellendus officiis et quos velit id natus mollitia dacilis
-                    ipsum et perspiciatis officia iste cupiditate ducimus nisi
-                    consequuntur excepturi dolorum. Sint, architecto, cumque
-                    facere officia harum dicta perferendis inventore excepturi
-                    sequi explicabo provident omnis dolore quasi fugit molestiae
-                    atque id consectetur reprehenderit laborum beatae
-                    consequatur similique.
+                    Empower your team with the knowledge to master the latest technologies and methodologies. Our comprehensive IT training services offer world-class courses in cloud, cybersecurity, DevOps, and more. Tailored to meet the needs of government professionals, our training includes preparation for industry-leading certifications like AWS, CISSP, PMP, and ITIL. We also offer end-user training for popular tools like Microsoft 365 and Google Workspace, ensuring your entire workforce is equipped to leverage the full power of their technology stack. Delivered through flexible learning formats—online, in-person, or hybrid—our programs fit seamlessly into your team’s schedule. Invest in professional development that drives expertise, boosts productivity, and builds a future-ready workforce.
                   </div>
                 </div>
               </div>
