footer logo and icon changes

--- a/index.html
+++ b/index.html
@@ -3709,7 +3709,7 @@
               <div class="col-sm-6 col-lg-4">
                 <div class="feature-box fbox-border fbox-effect">
                   <div class="fbox-icon">
-                    <a href="#"><i class="bi-display i-alt"></i></a>
+                    <a href="#"><i class="bi-diagram-3 i-alt"></i></a>
                   </div>
 
                   <div class="fbox-content">
@@ -3725,7 +3725,7 @@
               <div class="col-sm-6 col-lg-4">
                 <div class="feature-box fbox-border fbox-effect">
                   <div class="fbox-icon">
-                    <a href="#"><i class="bi-eye i-alt"></i></a>
+                    <a href="#"><i class="bi-cloud-upload i-alt"></i></a>
                   </div>
 
                   <div class="fbox-content">
@@ -3741,7 +3741,7 @@
               <div class="col-sm-6 col-lg-4">
                 <div class="feature-box fbox-border fbox-effect">
                   <div class="fbox-icon">
-                    <a href="#"><i class="bi-box i-alt"></i></a>
+                    <a href="#"><i class="bi-hdd-network i-alt"></i></a>
                   </div>
 
                   <div class="fbox-content">
@@ -3757,7 +3757,7 @@
               <div class="col-sm-6 col-lg-4">
                 <div class="feature-box fbox-border fbox-effect">
                   <div class="fbox-icon">
-                    <a href="#"><i class="bi-layers-half i-alt"></i></a>
+                    <a href="#"><i class="bi-ethernet i-alt"></i></a>
                   </div>
 
                   <div class="fbox-content">
@@ -3773,7 +3773,7 @@
               <div class="col-sm-6 col-lg-4">
                 <div class="feature-box fbox-border fbox-effect">
                   <div class="fbox-icon">
-                    <a href="#"><i class="bi-droplet-half i-alt"></i></a>
+                    <a href="#"><i class="bi-gear i-alt"></i></a>
                   </div>
 
                   <div class="fbox-content">
@@ -3789,7 +3789,7 @@
               <div class="col-sm-6 col-lg-4">
                 <div class="feature-box fbox-border fbox-effect">
                   <div class="fbox-icon">
-                    <a href="#"><i class="bi-textarea-t i-alt"></i></a>
+                    <a href="#"><i class="bi-shield-check i-alt"></i></a>
                   </div>
 
                   <div class="fbox-content">
