--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 	============================================= -->
 
-    <title>Home - Corporate Layout 4 | Canvas</title>
+    <title>Home | RESOH</title>
   </head>
 
   <body class="stretched">
