--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
                     class="logo-default"
                     srcset="images/logo.png, images/logo@2x.png 2x"
                     src="images/logo@2x.png"
-                    alt="Canvas Logo"
+                    alt="RESOH Logo"
                   />
 
                   <img
                     class="logo-dark"
                     srcset="images/logo-dark.png, images/logo-dark@2x.png 2x"
                     src="images/logo-dark@2x.png"
-                    alt="Canvas Logo"
+                    alt="RESOH Logo"
                   />
                 </a>
               </div>
