--- a/index.html
+++ b/index.html
@@ -3676,7 +3676,7 @@
                     data-rotate="flipInX"
                     data-speed="3500"
                   >
-                    IT Infrastructure this is <br>
+                    IT Infrastructure that is <br>
                     <span class="t-rotate"
                       >Simple|Customizable|Flexible|Easy|Profitable</span
                     >
