footer update to index

--- a/error.html
+++ b/error.html
@@ -3843,7 +3843,7 @@
                     <div class="widget">
                       <h4>Recent Posts</h4>
 
-                      <div class="posts-sm row col-mb-30" id="post-list-footer">
+                      <!-- <div class="posts-sm row col-mb-30" id="post-list-footer">
                         <div class="entry col-12">
                           <div class="grid-inner row">
                             <div class="col">
@@ -3903,7 +3903,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -3915,31 +3915,31 @@
                     <div class="widget">
                       <div class="row g-4">
                         <div class="col-lg-6">
-                          <div class="counter counter-small">
+                          <!-- <div class="counter counter-small">
                             <span
                               data-from="50"
-                              data-to="15065421"
+                              data-to="7165243"
                               data-refresh-interval="80"
                               data-speed="3000"
                               data-comma="true"
                             ></span>
-                          </div>
+                          </div> -->
 
-                          <h5 class="mb-0">Total Downloads</h5>
+                          <h5 class="mb-0">Unique Entity ID:<br>NF7YYHYGMT98</h5>
                         </div>
 
                         <div class="col-lg-6">
-                          <div class="counter counter-small">
+                          <!-- <div class="counter counter-small">
                             <span
                               data-from="100"
-                              data-to="18465"
+                              data-to="16752"
                               data-refresh-interval="50"
                               data-speed="2000"
                               data-comma="true"
                             ></span>
-                          </div>
+                          </div> -->
 
-                          <h5 class="mb-0">Clients</h5>
+                          <h5 class="mb-0">CAGE Code:<br>6XFL8</h5>
                         </div>
                       </div>
                     </div>
@@ -4034,7 +4034,7 @@
 
         <!-- Copyrights
 
-    ============================================= -->
+      ============================================= -->
 
         <div id="copyrights">
           <div class="container">
