--- a/index.html
+++ b/index.html
@@ -4095,13 +4095,13 @@
 
       <!-- Footer
 
-		============================================= -->
+	============================================= -->
 
       <footer id="footer" class="dark">
         <div class="container">
           <!-- Footer Widgets
 
-				============================================= -->
+      ============================================= -->
 
           <div class="footer-widgets-wrap">
             <div class="row col-mb-50">
@@ -4116,9 +4116,10 @@
                       />
 
                       <p>
-                        We believe in <strong>Simple</strong>,
-                        <strong>Creative</strong> &amp;
-                        <strong>Flexible</strong> Design Standards.
+                        We believe in <strong>Simple</strong>,<br />
+                        <strong>Creative</strong> &amp; <strong>Flexible</strong
+                        ><br />
+                        Business Practices.
                       </p>
 
                       <div
@@ -4131,70 +4132,92 @@
                         <address>
                           <strong>Headquarters:</strong><br />
 
-                          795 Folsom Ave, Suite 600<br />
+                          <!-- 795 Folsom Ave, Suite 600<br> -->
 
-                          San Francisco, CA 94107<br />
+                          Beachwood, OH 44122<br />
                         </address>
 
                         <abbr title="Phone Number"
                           ><strong>Phone:</strong></abbr
                         >
-                        (1) 8547 632521<br />
+                        +1 (216) 532-3010<br />
 
-                        <abbr title="Fax"><strong>Fax:</strong></abbr> (1) 11
-                        4752 1433<br />
+                        <!--abbr title="Fax"><strong>Fax:</strong></-abbr> (1) 11
+                      4752 1433<br / -->
 
                         <abbr title="Email Address"
                           ><strong>Email:</strong></abbr
                         >
-                        info@canvas.com
+                        info@resoh.com
                       </div>
                     </div>
                   </div>
 
                   <div class="col-md-4">
                     <div class="widget widget_links">
-                      <h4>Blogroll</h4>
+                      <h4>Resources</h4>
 
                       <ul>
                         <li>
-                          <a href="https://codex.wordpress.org/"
-                            >Documentation</a
+                          <a
+                            href="https://www.usaspending.gov/"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            >USAspending.gov</a
                           >
                         </li>
 
                         <li>
                           <a
-                            href="https://wordpress.org/support/forum/requests-and-feedback"
-                            >Feedback</a
+                            href="https://sam.gov/content/home"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            >SAM.gov | Home</a
                           >
                         </li>
 
                         <li>
-                          <a href="https://wordpress.org/extend/plugins/"
-                            >Plugins</a
+                          <a
+                            href="https://www.fpds.gov/fpdsng_cms/index.php/en/"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            >FPDS.gov ezSearch</a
                           >
                         </li>
 
                         <li>
-                          <a href="https://wordpress.org/support/"
-                            >Support Forums</a
+                          <a
+                            href="https://www.sba.gov/"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            >Small Business Administration</a
                           >
                         </li>
 
                         <li>
-                          <a href="https://wordpress.org/extend/themes/"
-                            >Themes</a
+                          <a
+                            href="https://www.gsa.gov/"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            >General Services Administration</a
                           >
                         </li>
 
                         <li>
-                          <a href="https://wordpress.org/news/">Canvas Blog</a>
+                          <a
+                            href="https://www.acquisition.gov/dfars"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            >DFARS acquisition.GOV</a
+                          >
                         </li>
 
                         <li>
-                          <a href="https://planet.wordpress.org/"
-                            >Canvas Planet</a
+                          <a
+                            href="https://www.acquisition.gov/browse/index/far"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            >FAR acquisition.GOV</a
                           >
                         </li>
                       </ul>
@@ -4205,7 +4228,7 @@
                     <div class="widget">
                       <h4>Recent Posts</h4>
 
-                      <div class="posts-sm row col-mb-30" id="post-list-footer">
+                      <!-- <div class="posts-sm row col-mb-30" id="post-list-footer">
                         <div class="entry col-12">
                           <div class="grid-inner row">
                             <div class="col">
@@ -4265,7 +4288,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -4275,33 +4298,33 @@
                 <div class="row col-mb-50">
                   <div class="col-md-4 col-lg-12">
                     <div class="widget">
-                      <div class="row col-mb-30">
+                      <div class="row g-4">
                         <div class="col-lg-6">
-                          <div class="counter counter-small">
+                          <!-- <div class="counter counter-small">
                             <span
                               data-from="50"
-                              data-to="15065421"
+                              data-to="7165243"
                               data-refresh-interval="80"
                               data-speed="3000"
                               data-comma="true"
                             ></span>
-                          </div>
+                          </div> -->
 
-                          <h5 class="mb-0">Total Downloads</h5>
+                          <h5 class="mb-0">Unique Entity ID:<br>NF7YYHYGMT98</h5>
                         </div>
 
                         <div class="col-lg-6">
-                          <div class="counter counter-small">
+                          <!-- <div class="counter counter-small">
                             <span
                               data-from="100"
-                              data-to="18465"
+                              data-to="16752"
                               data-refresh-interval="50"
                               data-speed="2000"
                               data-comma="true"
                             ></span>
-                          </div>
+                          </div> -->
 
-                          <h5 class="mb-0">Clients</h5>
+                          <h5 class="mb-0">CAGE Code:<br>6XFL8</h5>
                         </div>
                       </div>
                     </div>
