update index before live

--- a/index.html
+++ b/index.html
@@ -3676,22 +3676,22 @@
                     data-rotate="flipInX"
                     data-speed="3500"
                   >
-                    IT Infrastructure that is <br>
+                    Small Business - Big Presence <br>
                     <span class="t-rotate"
-                      >Simple|Customizable|Flexible|Easy|Profitable</span
+                      >Personalized Service|Agile Solutions|Dedicated Support</span
                     >
                   </span>
                 </h1>
 
                 <span class="d-none d-md-block"
-                  >Empower your team with cutting-edge technology, seamless connectivity, and unparalleled reliability—crafted to inspire greatness.</span
+                  >Partner with a dedicated small business offering tailored IT solutions and support to drive meaningful results.</span
                 >
               </div>
 
               <a
                 href="#"
                 class="button button-border button-light button-rounded button-reveal text-end button-large mt-5 d-none d-md-inline-block"
-                ><i class="uil uil-angle-right-b"></i><span>Start Tour</span></a
+                ><i class="uil uil-angle-right-b"></i><span>Work With Us</span></a
               >
             </div>
           </div>
@@ -3925,7 +3925,7 @@
                     aria-labelledby="v-pills-home-tab"
                     tabindex="0"
                   >
-                    <h3>Ultra Responsive Template</h3>
+                    <h3>Next-Generation Networking for Seamless Operations</h3>
 
                     <img
                       class="alignright img-responsive"
@@ -3943,7 +3943,7 @@
                     aria-labelledby="v-pills-profile-tab"
                     tabindex="0"
                   >
-                    <h3>Retina Ready Display</h3>
+                    <h3>Flexible Cloud Solutions for Every Need</h3>
 
                     Redefine what’s possible with cloud infrastructure solutions that adapt to your agency’s unique needs. Our cloud services span public, private, and hybrid models, delivering unmatched flexibility and control. From seamless cloud migrations to sophisticated hybrid deployments, we help agencies leverage the power of the cloud without compromising security or compliance. Our offerings include cloud-native solutions for secure storage, robust disaster recovery, and comprehensive cloud management tools that provide full visibility and oversight. Integrated cloud security safeguards sensitive data, while automated backups ensure resilience and business continuity. Unlock new levels of efficiency and scalability, enabling your team to achieve more while maintaining the highest levels of reliability and security.
                   </div>
@@ -3955,13 +3955,14 @@
                     aria-labelledby="v-pills-disabled-tab"
                     tabindex="0"
                   >
-                    <img
+                    <!--img
                       class="alignleft img-responsive"
                       src="https://www.w3schools.com/tags/colormap.gif"
                       alt="Image"
-                    />
+                    /-->
 
-                    <h3>Unlimited Color Options</h3>
+                    <h3>Precision Data Management for Optimal Performance</h3>
+
                     Take control of your data with cutting-edge storage solutions that deliver precision, performance, and security. Our enterprise storage systems—SAN, NAS, and object storage—are built to handle the most demanding workloads, ensuring uninterrupted access and zero data loss. We provide backup and disaster recovery solutions that are fail-proof, automated, and fast, protecting your data from unexpected incidents. With intelligent archiving options, agencies can optimize storage costs while maintaining quick access to historical records. Every solution is crafted to exceed the highest standards of data integrity, confidentiality, and availability, allowing agencies to transform their data into actionable insights. Achieve unparalleled data management for a more responsive and proactive organization.
                   </div>
 
@@ -3972,13 +3973,13 @@
                     aria-labelledby="v-pills-messages-tab"
                     tabindex="0"
                   >
-                    <img
+                    <!--img
                       class="alignleft img-responsive"
                       src="images/landing/bootstrap.png"
                       alt="Image"
-                    />
+                    /-->
 
-                    <h3>Bootstrap v3.2.0 Compatiable</h3>
+                    <h3>Comprehensive Security with High-Tech Cabling</h3>
 
                     Safeguard your facilities with state-of-the-art service cameras and a structured cabling network that enhances efficiency. Our high-resolution IP cameras, thermal imaging, and VMS systems provide complete surveillance coverage, delivering crystal-clear visibility across all environments. Access control systems, including biometric scanners and smart card readers, further secure critical areas, ensuring only authorized personnel have entry. With structured cabling solutions using Cat 6, Cat 7, and fiber optics, we build resilient, high-speed networks that connect every endpoint reliably. Our professional installations include meticulous cable management and testing, resulting in clean, optimized setups that support future expansion. Trust our solutions to deliver bulletproof security and seamless connectivity for your organization’s physical infrastructure.
                   </div>
@@ -3990,7 +3991,7 @@
                     aria-labelledby="v-pills-settings-tab"
                     tabindex="0"
                   >
-                    <h3>Light &amp; Dark Scheme Available</h3>
+                    <h3>Expert IT Training for a Skilled Workforce</h3>
 
                     Empower your team with the knowledge to master the latest technologies and methodologies. Our comprehensive IT training services offer world-class courses in cloud, cybersecurity, DevOps, and more. Tailored to meet the needs of government professionals, our training includes preparation for industry-leading certifications like AWS, CISSP, PMP, and ITIL. We also offer end-user training for popular tools like Microsoft 365 and Google Workspace, ensuring your entire workforce is equipped to leverage the full power of their technology stack. Delivered through flexible learning formats—online, in-person, or hybrid—our programs fit seamlessly into your team’s schedule. Invest in professional development that drives expertise, boosts productivity, and builds a future-ready workforce.
                   </div>
@@ -3999,9 +4000,9 @@
             </div>
 
             <div class="line"></div>
-
+            <!--
             <h4 class="text-center">Meet our Clients</h4>
-
+            
             <ul
               class="clients-grid row row-cols-2 row-cols-sm-3 row-cols-md-6 mb-0"
             >
@@ -4077,6 +4078,7 @@
                 /></a>
               </li>
             </ul>
+            -->            
           </div>
 
           <a
@@ -4084,9 +4086,9 @@
             class="button button-full text-center text-end footer-stick"
           >
             <div class="container">
-              Canvas comes with Unlimited Customizations &amp; Options.
-              <strong>Work with Us</strong>
-              <i class="fa-solid fa-caret-right" style="top: 4px"></i>
+              Contact us today to explore how we can support your goals.<br>
+              <strong>Ready to make a difference together?</strong>
+              <!--i class="fa-solid fa-caret-right" style="top: 4px"></i-->
             </div>
           </a>
         </div>
@@ -4373,7 +4375,7 @@
                           class="col-6 col-md-12 col-lg-6 d-flex align-items-center"
                         >
                           <a
-                            href="#"
+                            href="https://www.facebook.com/resohllc"
                             class="social-icon text-white border-transparent bg-facebook me-2 mb-0 float-none"
                           >
                             <i class="fa-brands fa-facebook-f"></i>
@@ -4381,7 +4383,7 @@
                             <i class="fa-brands fa-facebook-f"></i>
                           </a>
 
-                          <a href="#" class="ms-1"
+                          <a href="https://www.facebook.com/resohllc" class="ms-1"
                             ><small class="d-block"
                               ><strong>Like Us</strong><br />on Facebook</small
                             ></a
@@ -4437,7 +4439,7 @@
                   class="d-flex justify-content-center justify-content-md-end mb-2"
                 >
                   <a
-                    href="#"
+                    href="https://www.facebook.com/resohllc"
                     class="social-icon border-transparent si-small h-bg-facebook"
                   >
                     <i class="fa-brands fa-facebook-f"></i>
@@ -4447,11 +4449,11 @@
 
                   <a
                     href="#"
-                    class="social-icon border-transparent si-small h-bg-x-twitter"
+                    class="social-icon border-transparent si-small h-bg-instagram"
                   >
-                    <i class="fa-brands fa-x-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
 
-                    <i class="fa-brands fa-x-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
                   </a>
 
                   <a
@@ -4500,7 +4502,7 @@
                   </a>
 
                   <a
-                    href="#"
+                    href="https://www.linkedin.com/company/resoh-llc/about"
                     class="social-icon border-transparent si-small me-0 h-bg-linkedin"
                   >
                     <i class="fa-brands fa-linkedin"></i>
@@ -4511,9 +4513,7 @@
 
                 <i class="bi-envelope"></i> info@resoh.com
                 <span class="middot">&middot;</span>
-                <i class="fa-solid fa-phone"></i> +1-11-6541-6369
-                <span class="middot">&middot;</span>
-                <i class="bi-skype"></i> CanvasOnSkype
+                <i class="fa-solid fa-phone"></i> +1-216-532-3010
               </div>
             </div>
           </div>
